// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly when off 1`] = `
"<Toggle value={false}>
  <div className=\\"toggle\\" style={[undefined]}>
    <input className=\\"toggle-input\\" type=\\"checkbox\\" value=\\"false\\" readOnly={true} />
    <label className=\\"toggle-button\\" onClick={[Function]} style={[undefined]} />
  </div>
</Toggle>"
`;

exports[`Toggle renders correctly when on 1`] = `
"<Toggle value={true}>
  <div className=\\"toggle\\" style={[undefined]}>
    <input className=\\"toggle-input\\" type=\\"checkbox\\" value=\\"true\\" readOnly={true} />
    <label className=\\"toggle-button\\" onClick={[Function]} style={[undefined]} />
  </div>
</Toggle>"
`;
